--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <hr>
 <section class="section-left" id="About">
     <div class ="paras">
-    <p class="sectionTag text-big">Success need Sacrifices</p>
+    <p class="sectionTag text-big"></p>
     <br>
     <br>
     <p class="sectionSubTag text-small">Education is often divided into types. The most common division is between formal, non-formal, and informal education.[31] However, some theorists only distinguish between formal and informal education.[32] Formal education happens in a complex institutional framework. Such frameworks have a chronological and hierarchical order. For instance, the modern schooling system has classes based on the student's age and progress, all the way from primary school to university. Formal education is usually controlled and guided by the government. It is normally compulsory up to a certain age.[33][34]
