--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             </div>
         </div>
         <div class="secondHalf">
-            <img src="https://source.unsplash.com/random/1920x1080/?education,free" alt="future of India" >
         </div>
     </div>
 
@@ -51,7 +50,7 @@
     <p class="sectionTag text-big">Transforming education in India</p>
     <br>
     <br>
-    <p class="sectionSubTag text-small">There is disagreement in the academic literature on whether education is an evaluative concept. This means that being good in some sense is part of the definition of education. So-called thick definitions affirm this. They may claim, for example, that an improvement of the learner is a requirement of education. Different thick definitions may still disagree among themselves on what kind of improvement is needed. Thin definitions, on the other hand, try to give a value-neutral account of education.[15][17] A closely related distinction is that between descriptive and prescriptive conceptions. Descriptive conceptions aim to describe how the term is actually used by regular speakers. Prescriptive conceptions try to express what good education is or how it should be done.[4][18]</p>
+    <p class="sectionSubTag text-small"> So-called thick definitions affirm this. They may claim, for example, that an improvement of the learner is a requirement of education. Different thick definitions may still disagree among themselves on what kind of improvement is needed. </p>
     </div>
     <div class="thumbnail">
         <img src="https://source.unsplash.com/random/1920x1080/?help,needy"alt="study" height="200px"width="300px">
