--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <section class="background firstSection">
     <div class="box-main">
         <div class="firstHalf">
-            <p class="text-big">The future of Education is here</p>
+            <p class="text-big">The future of Education is here.</p>
             <p class="text-small">Education is the transmission of knowledge, skills, and character traits. There are many debates about its precise definition, for example, about which aims it tries to achieve. A further issue is whether part of the meaning of education is that the change in the student is an improvement. Some researchers stress the role of critical thinking to distinguish education from indoctrination. These disagreements affect how to identify, measure, and improve forms of education. The term can also refer to the mental states and qualities of educated people. Additionally, it can mean the academic field studying education.
             </p>
             <div class ="buttons">
@@ -50,7 +50,7 @@
     <p class="sectionTag text-big">Transforming education in India</p>
     <br>
     <br>
-    <p class="sectionSubTag text-small"> So-called thick definitions affirm this. They may claim, for example, that an improvement of the learner is a requirement of education. Different thick definitions may still disagree among themselves on what kind of improvement is needed. </p>
+    <p class="sectionSubTag text-small"> India is poised for a revolutionary shift in its educational landscape. This transformation, however, requires a systemic approach, active stakeholder involvement, and a commitment to improving the quality of education across all levels.  </p>
     </div>
     <div class="thumbnail">
         <img src="https://source.unsplash.com/random/1920x1080/?help,needy"alt="study" height="200px"width="300px">
@@ -62,9 +62,9 @@
     <p class="sectionTag text-big"></p>
     <br>
     <br>
-    <p class="sectionSubTag text-small">Education is often divided into types. The most common division is between formal, non-formal, and informal education.[31] However, some theorists only distinguish between formal and informal education.[32] Formal education happens in a complex institutional framework. Such frameworks have a chronological and hierarchical order. For instance, the modern schooling system has classes based on the student's age and progress, all the way from primary school to university. Formal education is usually controlled and guided by the government. It is normally compulsory up to a certain age.[33][34]
+    <p class="sectionSubTag text-small">Education is often divided into types. The most common division is between formal, non-formal, and informal education. However, some theorists only distinguish between formal and informal education. Formal education happens in a complex institutional framework. Such frameworks have a chronological and hierarchical order. For instance, the modern schooling system has classes based on the student's age and progress, all the way from primary school to university. Formal education is usually controlled and guided by the government. It is normally compulsory up to a certain age.
 
-        Non-formal and informal education take place outside the formal schooling system. Non-formal education is a middle ground. Like formal education, it is organized, systematic, and carried out with a clear purpose in mind. Examples are tutoring, fitness classes, and the scouting movement.[35] Informal education, on the other hand, happens in an unsystematic way through daily experiences and exposure to the environment. Unlike formal and non-formal education, there is usually no designated authority figure responsible for teaching.[36] Informal education is present in many settings. It happens throughout one's life, mostly in a spontaneous way. This is how children learn their mother tongue from their parents or how people learn to prepare a dish by cooking together.[33][34][2]</p>
+        Non-formal and informal education take place outside the formal schooling system. Non-formal education is a middle ground. Like formal education, it is organized, systematic, and carried out with a clear purpose in mind. Examples are tutoring, fitness classes, and the scouting movement. Informal education, on the other hand, happens in an unsystematic way through daily experiences and exposure to the environment. Unlike formal and non-formal education, there is usually no designated authority figure responsible for teaching.[36] Informal education is present in many settings. It happens throughout one's life, mostly in a spontaneous way. This is how children learn their mother tongue from their parents or how people learn to prepare a dish by cooking together.</p>
     </div>
     <div class="thumbnail">
         <img src="https://source.unsplash.com/random/1920x1080/?choclates,trophy"alt="study" height="200px"width="300px">
